added TA's solution to bonus but counts are showing same for both current user and total times greeted. Need to go back over it when i have the time.

--- a/HelloMVC/Views/Home/Greeting.cshtml
+++ b/HelloMVC/Views/Home/Greeting.cshtml
@@ -1,5 +1,7 @@
 ﻿
 
 <h1>@ViewBag.greetingMessage</h1>
-<p> You have been greeted @ViewBag.counter  times!</p>
+<p> You have been greeted @ViewBag.userCounter times!</p>
+
+<p> There have been a total of  @ViewBag.TotalCounter  greetings so far!</p>
 <a href="/home">Click to go back</a>
