--- a/HelloMVC/Views/Home/Index.cshtml
+++ b/HelloMVC/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿<form action="/home/greeting" method="POST">
+﻿<form action="/home" method="POST">
     <label>
         Enter a name
         <input type="text" name="name">
